Don't specify multiple tags in taglink directives
Not sure if that is supposed to work; currently it doesn't render
correctly/deterministically.

--- a/glibc/fork.mdwn
+++ b/glibc/fork.mdwn
@@ -1,4 +1,5 @@
-[[!meta copyright="Copyright © 2010, 2011 Free Software Foundation, Inc."]]
+[[!meta copyright="Copyright © 2010, 2011, 2016 Free Software Foundation,
+Inc."]]
 
 [[!meta license="""[[!toggle id="license" text="GFDL 1.2+"]][[!toggleable
 id="license" text="Permission is granted to copy, distribute and/or modify this
@@ -44,7 +45,7 @@ they have patches for software packages, to avoid using `fork` followed by
   * Include de-duplicate information from elsewhere: [[hurd-paper]],
     [[hurd-talk]], [[hurd/ng/trivialconfinementvsconstructorvsfork]],
     [[open_issues/resource_management_problems/zalloc_panics]] ([[!taglink
-    open_issue_glibc open_issue_documentation]]).
+    open_issue_glibc]], [[!taglink open_issue_documentation]]).
 
   * We no longer support `MACH_IPC_COMPAT`, thus we can get rid of the `err =
     __mach_port_allocate_name ([...]); if (err == KERN_NAME_EXISTS)` code
