--- a/glibc/process.mdwn
+++ b/glibc/process.mdwn
@@ -1,4 +1,4 @@
-[[!meta copyright="Copyright © 2009, 2010, 2013 Free Software Foundation,
+[[!meta copyright="Copyright © 2009, 2010, 2013, 2016 Free Software Foundation,
 Inc."]]
 
 [[!meta license="""[[!toggle id="license" text="GFDL 1.2+"]][[!toggleable
@@ -18,7 +18,8 @@ process, there is additional work to be done, for example for [[signal]]s,
 
 # Startup
 
-[[!taglink open_issue_glibc open_issue_hurd]]: Enumerate all the different
+[[!taglink open_issue_glibc]], [[!taglink open_issue_hurd]]:
+Enumerate all the different
 cases.  Add tests to [[glibc]] to make sure all these work.
 
 
