--- a/glibc/startup.mdwn
+++ b/glibc/startup.mdwn
@@ -1,4 +1,5 @@
-[[!meta copyright="Copyright © 2011, 2014 Free Software Foundation, Inc."]]
+[[!meta copyright="Copyright © 2011, 2014, 2016 Free Software Foundation,
+Inc."]]
 
 [[!meta license="""[[!toggle id="license" text="GFDL 1.2+"]][[!toggleable
 id="license" text="Permission is granted to copy, distribute and/or modify this
@@ -11,7 +12,7 @@ License|/fdl]]."]]"""]]
 Be it statically or dynamically linked, the *startup* of glibc-based programs
 is quite hairy on GNU Hurd systems.
 
-[[!taglink open_issue_documentation open_issue_glibc]]
+[[!taglink open_issue_documentation]], [[!taglink open_issue_glibc]]
 
   * [[!message-id "200103081944.f28JiDk00232@delius.kettenis.local"]]
 
