--- a/community/gsoc.mdwn
+++ b/community/gsoc.mdwn
@@ -16,11 +16,9 @@ The Google Summer of Code 2014 is over.  Chances are that we will again be
 participating in 2015, stay tuned.
 -->
 
-<!--
 We're in!  The GNU Hurd project is again participating in the [Google Summer of
-Code](http://www.google-melange.com/) under the [GNU
+Code](https://summerofcode.withgoogle.com/) under the [GNU
 umbrella](http://www.gnu.org/software/soc-projects/).
--->
 
 <!--
 This year's *student application period* is over.  Thanks for sending in your
@@ -29,18 +27,17 @@ attention to any questions posted on your proposal's page.  The Google site's
 notification system should be sending out emails, too.
 -->
 
-Per the [Google Summer of Code 2016 Program
-Timeline](https://summerofcode.withgoogle.com/),
+Per the [program timeline](https://summerofcode.withgoogle.com/how-it-works/),
+<!--
 we are awaiting for the approval of GNU as a mentoring organization.
+-->
+from 2016-03-14 to 2016-03-25, it's the *student application period*, which
+is plenty of time for preparing and discussing your applications -- but please
+don't wait to the last minute!
 <!--
 we're now waiting for Google to announce the number of slots that the whole GNU
 project gets, and we'll be discussing with our GNU peers about how to split
 these up among all the GNU subprojects.
--->
-<!--
-from 2015-03-16 to 2015-03-27, it's the *student application period*, which
-is plenty of time for preparing and discussing your applications -- but please
-don't wait to the last minute!
 -->
 
 As we only have finite resources (meaning that we won't be able to accept all
@@ -80,10 +77,9 @@ We have a list of [[project_ideas]], and students are likewise encouraged to
 submit their own project proposals.  Please follow our
 [[student_application_form]].
 
-<!--
-Then, don't forget to visit <http://www.google-melange.com/>, and press the
-button for submitting your proposal.
--->
+Then, don't forget to visit <https://summerofcode.withgoogle.com/> to formally
+submit your proposal, and please pay attention to and answer any review
+comments you'll get on your proposal submission.
 
 Please read up about [[contributing]] in general, and please ask any questions
 you might have, on the [[mailing_lists]], or on [[IRC]], for example at one of
