--- a/sidebar.mdwn
+++ b/sidebar.mdwn
@@ -1,5 +1,5 @@
 [[!meta copyright="Copyright © 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014,
-2015 Free Software Foundation, Inc."]]
+2015, 2016 Free Software Foundation, Inc."]]
 
 [[!meta license="""[[!toggle id="license" text="GFDL 1.2+"]][[!toggleable
 id="license" text="Permission is granted to copy, distribute and/or modify this
@@ -10,6 +10,14 @@ is included in the section entitled [[GNU Free Documentation
 License|/fdl]]."]]"""]]
 
 Welcome to... [[!img /logo/boxes-redrawn.png link=/logo]] ... the GNU Hurd!
+
+[[!template id=highlight text="""**Breaking News**
+
+---
+
+The **Google Summer of Code 2016** is on!  If you're a student, consider
+applying for a GNU Hurd project -- details to be found on our
+[[community/GSoC]] and [[community/gsoc/project_ideas]] pages."""]]
 
 ---
 
