open_issues/boehm_gc: d6c34577eeaba37ff08998d18676531082c040b6 (2016-03-18), 01d2509c13f3aa7e03cb4cbf50fda08f98725ce4 (2016-03-24)

--- a/open_issues/boehm_gc.mdwn
+++ b/open_issues/boehm_gc.mdwn
@@ -1,4 +1,4 @@
-[[!meta copyright="Copyright © 2010, 2012, 2013, 2014, 2015 Free Software
+[[!meta copyright="Copyright © 2010, 2012, 2013, 2014, 2015, 2016 Free Software
 Foundation, Inc."]]
 
 [[!meta license="""[[!toggle id="license" text="GFDL 1.2+"]][[!toggleable
@@ -33,9 +33,9 @@ git diff --patience --stat=$COLUMNS,$COLUMNS --patch --src-prefix=./ --dst-prefi
 
 -->
 
-Last reviewed up to Git commit bf62552626acc7ad8babdc350a6365cb97ec8776
-(2015-01-07), and for `libatomic_ops` to Git commit
-09887cae2790e29ff535cc56f7bd0c4459ef4e2b (2015-01-09).
+Last reviewed up to Git commit d6c34577eeaba37ff08998d18676531082c040b6
+(2016-03-18), and for `libatomic_ops` to Git commit
+01d2509c13f3aa7e03cb4cbf50fda08f98725ce4 (2016-03-24).
 
   * `configure.ac`
 
@@ -172,6 +172,19 @@ Last reviewed up to Git commit bf62552626acc7ad8babdc350a6365cb97ec8776
             #   error "REDIRECT_MALLOC with THREADS works at most on Linux."
             # endif
 
+      * TODO
+
+            #if ((defined(UNIX_LIKE) && (defined(DARWIN) || defined(HURD) \
+                                         || defined(OPENBSD) || defined(ARM32) \
+                                         || defined(MIPS) || defined(AVR32) \
+                                         || defined(OR1K) || defined(NIOS2))) \
+                 || (defined(LINUX) && !defined(__gnu_linux__)) \
+                 || (defined(RTEMS) && defined(I386)) || defined(PLATFORM_ANDROID)) \
+                && !defined(NO_GETCONTEXT)
+            # define NO_GETCONTEXT
+            #endif
+
+        Also see comment below, regarding `mach_dep.c`.
 
     *HURD* has:
 
@@ -223,18 +236,15 @@ Last reviewed up to Git commit bf62552626acc7ad8babdc350a6365cb97ec8776
         [[!taglink open_issue_glibc]], but this is not a real problem here,
         because we can use the following GCC internal function without much
         overhead:
+        [TODO] (?)
+
+        Also see comment above, regarding `include/private/gcconfig.h`.
 
       * `GC_with_callee_saves_pushed`
 
         The `HAVE_BUILTIN_UNWIND_INIT` case is ours.
 
   * `os_dep.c`
-
-      * `read`
-
-        Sure that it doesn't internally (in [[glibc]]) use `malloc`.  Probably
-        only / mostly (?) a problem for `--enable-redirect-malloc`
-        configurations?  Linux with threads uses `readv`.
 
       * TODO.
 
@@ -382,8 +392,8 @@ Last reviewed up to Git commit bf62552626acc7ad8babdc350a6365cb97ec8776
 # Build
 
 Here's a log of a boehm-gc build run; this is from Git commit
-bf62552626acc7ad8babdc350a6365cb97ec8776 (2015-01-07), and for `libatomic_ops`
-Git commit 09887cae2790e29ff535cc56f7bd0c4459ef4e2b (2015-01-09), run on
+d6c34577eeaba37ff08998d18676531082c040b6 (2016-03-18), and for `libatomic_ops`
+Git commit 01d2509c13f3aa7e03cb4cbf50fda08f98725ce4 (2016-03-24), run on
 kepler.SCHWINGE and laplace.SCHWINGE.
 
     $ export LC_ALL=C
