--- a/open_issues/problematic_packages.mdwn
+++ b/open_issues/problematic_packages.mdwn
@@ -28,3 +28,7 @@ This page lists the few packages whose build makes the Debian buildd box crash a
 * ext2fs gets stuck
 
   * emacs24
+
+* loops and eats memory
+
+  * pygobject
