--- a/open_issues/problematic_packages.mdwn
+++ b/open_issues/problematic_packages.mdwn
@@ -20,6 +20,7 @@ This page lists the few packages whose build makes the Debian buildd box crash a
   * ruby-hiredis
   * libxs
   * subversion testsuite
+  * socket-wrapper
 
 * breaks cron
 
