document how to profile the kernel

--- a/microkernel/mach/gnumach.mdwn
+++ b/microkernel/mach/gnumach.mdwn
@@ -79,6 +79,7 @@ GNU/Hurd.
   * [[Reference_Manual]]
   * [[Building]]
   * [[Debugging]]
+  * [[Profiling]]
   * [[Boot_Trace]]
   * [[Memory_Management]]
   * [[Continuation]]s
