--- a/open_issues/profiling.mdwn
+++ b/open_issues/profiling.mdwn
@@ -18,9 +18,7 @@ done for [[performance analysis|performance]] reasons.
   * [[hurd/debugging/rpctrace]]
 
   * [[gprof]]
-
-    Should be working, but some issues have been reported, regarding GCC spec
-    files.  Should be possible to fix (if not yet done) easily.
+  * [[profiling GNU Mach|microkernel/mach/gnumach/profiling]]
 
   * [[glibc]]'s sotruss
 
