--- a/hurd/running/debian/qemu_image.mdwn
+++ b/hurd/running/debian/qemu_image.mdwn
@@ -16,7 +16,7 @@ Usage:
 
     $ wget http://people.debian.org/~sthibault/hurd-i386/debian-hurd.img.tar.gz
     $ tar -xz < debian-hurd.img.tar.gz
-    $ kvm -m 512 -drive cache=writeback,file=$(echo debian-hurd-*.img)
+    $ kvm -m 1G -drive cache=writeback,file=$(echo debian-hurd-*.img)
 
 Please also read the README file: <http://people.debian.org/~sthibault/hurd-i386/README>
 
