mention sem_init(pshared=1) too

--- a/hurd/porting/guidelines.mdwn
+++ b/hurd/porting/guidelines.mdwn
@@ -321,9 +321,9 @@ These are not POSIX, `sys/types.h` and `stdint.h` should be used instead.
 
 Not supported and actually very dangerous (permits userland to completely disable interruptions...). Replace with `ioperm(0, 65536, 1)`.
 
-## <a name="iopl"> `semget`, `sem_open` </a>
+## <a name="sem_open"> `semget`, `sem_open` </a>
 
-Not implemented, will always fail.  Use `sem_init()` instead if possible.
+Not implemented yet, will always fail.  Use `sem_init()` instead if possible. `sem_init` with pshared=1 is not available yet either.
 
 ## <a name="net/..."> `net/if_arp.h`, `net/ethernet.h`, etc. </a>
 
