--- a/hurd/porting/guidelines.mdwn
+++ b/hurd/porting/guidelines.mdwn
@@ -329,11 +329,11 @@ Not implemented yet, will always fail.  Use `sem_init()` instead if possible. `s
 
 Not implemented, not POSIX.  Try to disable the feature in the package.
 
-## <a name="parport"> <linux/parport.h> <linux/ppdev.h> </a>
+## <a name="parport">  `linux/parport.h`   `linux/ppdev.h`  </a>
 
 There is no programming interface for the parallel port on GNU/Hurd yet.
 
-## <a name="cdrom"> <linux/cdrom.h> </a>
+## <a name="cdrom">  `linux/cdrom.h`  </a>
 
 Use <sys/cdrom.h> instead.
 
@@ -343,7 +343,7 @@ This is not actually standard; cfsetspeed, cfsetispeed, or cfsetospeed should be
 
 ## <a name="termios"> IUCLC </a>
 
-IUCLC is a GNU extension. `#define _GNU_SOURCE' thus has to be used to get the definition (even if Linux unconditionally provides it, it should not).
+IUCLC is a GNU extension. `#define _GNU_SOURCE` thus has to be used to get the definition (even if Linux unconditionally provides it, it should not).
 
 ## <a name="errno"> `errno` values </a>
 
