open_issues/gcc: a050099a416f013bda35832b878d9a57b0cbb231 (gcc-6-branch branch point; 2016-04-15)

--- a/open_issues/boehm_gc.mdwn
+++ b/open_issues/boehm_gc.mdwn
@@ -106,6 +106,9 @@ Last reviewed up to Git commit d6c34577eeaba37ff08998d18676531082c040b6
             #   define USE_MMAP_ANON
             #endif
 
+          * `[Hurd] Use mmap instead of sbrk`,
+            <https://github.com/ivmai/bdwgc/pull/95>.
+
       * TODO
 
             #if defined(GC_LINUX_THREADS) && defined(REDIRECT_MALLOC)
@@ -223,6 +226,9 @@ Last reviewed up to Git commit d6c34577eeaba37ff08998d18676531082c040b6
       * Where does our `GETPAGESIZE` come from?  Should we `#include
         <unistd.h>` like it is done for *LINUX*?
 
+      * `[Hurd] Use mmap instead of sbrk`,
+        <https://github.com/ivmai/bdwgc/pull/95>.
+
   * `include/gc_pthread_redirects.h`
 
       * TODO
@@ -279,6 +285,8 @@ Last reviewed up to Git commit d6c34577eeaba37ff08998d18676531082c040b6
     correct.
 
   * `mmap`, b64dd3bc1e5a23e677c96b478d55648a0730ab75
+
+    This is (still) stale/redundant/unused, as far as I can tell.
 
   * `parallel mark`, 07c2b8e455c9e70d1f173475bbf1196320812154, pass
     `--disable-parallel-mark` or enable for us, too?
