--- a/open_issues/gcc/pie.mdwn
+++ b/open_issues/gcc/pie.mdwn
@@ -1,4 +1,5 @@
-[[!meta copyright="Copyright © 2012, 2013 Free Software Foundation, Inc."]]
+[[!meta copyright="Copyright © 2012, 2013, 2016 Free Software Foundation,
+Inc."]]
 
 [[!meta license="""[[!toggle id="license" text="GFDL 1.2+"]][[!toggleable
 id="license" text="Permission is granted to copy, distribute and/or modify this
@@ -49,3 +50,10 @@ License|/fdl]]."]]"""]]
 ## [[!message-id "20130211040854.GN5926@type.youpi.perso.aquilenet.fr"]]
 
 [[glibc]] `t/pie-sbrk` branch.
+
+
+## 2016-04
+
+Profiling has been fixed (GCC specs; commit
+9b2eb5d3268cf674f9a6964479f20428e0b43500); PIE unknown.
+See also `PIE_SPEC` comments in [[gcc]].
