--- a/open_issues/profiling.mdwn
+++ b/open_issues/profiling.mdwn
@@ -1,5 +1,5 @@
-[[!meta copyright="Copyright © 2010, 2011, 2013, 2014 Free Software Foundation,
-Inc."]]
+[[!meta copyright="Copyright © 2010, 2011, 2013, 2014, 2016 Free Software
+Foundation, Inc."]]
 
 [[!meta license="""[[!toggle id="license" text="GFDL 1.2+"]][[!toggleable
 id="license" text="Permission is granted to copy, distribute and/or modify this
@@ -18,9 +18,6 @@ done for [[performance analysis|performance]] reasons.
   * [[hurd/debugging/rpctrace]]
 
   * [[gprof]]
-
-    Should be working, but some issues have been reported, regarding GCC spec
-    files.  Should be possible to fix (if not yet done) easily.
 
   * [[glibc]]'s sotruss
 
