add O_NOATIME fixup

--- a/contributing.mdwn
+++ b/contributing.mdwn
@@ -112,6 +112,7 @@ lookups|hurd/interface/dir_lookup]] work.
 * Fix our [[open_issues/symlink_translator]].
 * Fix chmod on fifos: mkfifo foo ; sudo chmod g+w foo
 * Strengthen httpfs: it should append '/' to URL automatically, it should not fallback index.html itself, etc. probably a lot more small easy issues.
+* Fix `O_NOATIME`, see <https://buildd.debian.org/status/fetch.php?pkg=borgbackup&arch=hurd-i386&ver=1.0.2-1&stamp=1460838100>
 
 <a name="porting"></a>
 ## Porting Packages
