reference the mailing list thread

--- a/open_issues/64-bit_port.mdwn
+++ b/open_issues/64-bit_port.mdwn
@@ -14,6 +14,7 @@ License|/fdl]]."]]"""]]
 There is a `master-x86_64` GNU Mach branch.  As of 2012-11-20, it only supports
 the [[microkernel/mach/gnumach/ports/Xen]] platform.
 
+See http://lists.gnu.org/archive/html/bug-hurd/2012-04/msg00000.html
 
 # IRC, freenode, #hurd, 2011-10-16
 
