PP have been implemented in 1.5

--- a/microkernel/mach/gnumach/projects/mach_5.mdwn
+++ b/microkernel/mach/gnumach/projects/mach_5.mdwn
@@ -40,10 +40,7 @@ using an union.  The kernel indicates this using a distinct message
 type.  MIG-generated code will detect this, and do the receiver lookup
 using a specialized translation function.
 
-An almost complete prototype is available.
-
-* <https://lists.debian.org/debian-hurd/2013/11/msg00092.html>
-* <http://darnassus.sceen.net/~teythoon/mach-protected-payloads/>
+This change has been implemented in GNU Mach and MIG 1.5.
 
 ## Type descriptor rework
 
