Add missing paragraph

--- a/microkernel/mach/gnumach/projects/mach_5.mdwn
+++ b/microkernel/mach/gnumach/projects/mach_5.mdwn
@@ -105,6 +105,10 @@ sysenter improves our IPC performance by ~10%.
 
 ### Implementation
 
+One trouble with sysenter/sysexit (or the amd equivalent) isn't
+available on all processors.  Linux solves this using the VDSO
+mechanism.
+
 I'd like to implement something similar:
 
 1. There is a platform dependent way to map a special page.
