--- a/faq/release.mdwn
+++ b/faq/release.mdwn
@@ -1,4 +1,4 @@
-[[!meta copyright="Copyright © 2008, 2013, 2015 Free Software Foundation,
+[[!meta copyright="Copyright © 2008, 2013, 2015, 2016 Free Software Foundation,
 Inc."]]
 
 [[!meta license="""[[!toggle id="license" text="GFDL 1.2+"]][[!toggleable
@@ -13,13 +13,13 @@ License|/fdl]]."]]"""]]
 
 [[!meta title="When will the Hurd be released?"]]
 
-GNU Hurd 0.7 has been [[released on 2015-10-31|news/2015-10-31-releases]],
-along with GNU Mach 1.6, and GNU MIG 1.6.  Read about the [[Hurd's
+GNU Hurd 0.8 has been [[released on 2016-05-18|news/2016-05-18-releases]],
+along with GNU Mach 1.7, and GNU MIG 1.7.  Read about the [[Hurd's
 status|hurd/status]].
 
 > OK, but when will it be finished?
 
-Well, is the Linux kernel considered to be really "finished"?  Hurd 0.7 does
+Well, is the Linux kernel considered to be really "finished"?  Hurd 0.8 does
 work, but of course it can still become better -- beginning to
 [[contribute|contributing]] and [[joining us|how_many_developers]] is the best
 way for you to help achieve that.  :-)
