--- a/history.mdwn
+++ b/history.mdwn
@@ -1,5 +1,5 @@
 [[!meta copyright="Copyright © 1998, 1999, 2001, 2002, 2007, 2008, 2009, 2011,
-2013, 2015 Free Software Foundation, Inc."]]
+2013, 2015, 2016 Free Software Foundation, Inc."]]
 
 [[!meta license="""[[!toggle id="license" text="GFDL 1.2+"]][[!toggleable
 id="license" text="Permission is granted to copy, distribute and/or modify this
@@ -116,6 +116,8 @@ mailing lists.
     released|news/2015-04-10-releases]] (2015-04-10)
   * [[GNU Hurd 0.7, GNU Mach 1.6, GNU MIG 1.6
     released|news/2015-10-31-releases]] (2015-10-31)
+  * [[GNU Hurd 0.8, GNU Mach 1.7, GNU MIG 1.7
+    released|news/2016-05-18-releases]] (2016-05-18)
 
 
 # An Incomplete GNU Hurd Timeline
@@ -173,4 +175,6 @@ mailing lists.
   * 2015: [...], [[GNU Hurd 0.6, GNU Mach 1.5, GNU MIG 1.5
     released|news/2015-04-10-releases]], [[Debian GNU/Hurd
     2015|news/2015-04-29-debian_gnu_hurd_2015]], [[GNU Hurd 0.7, GNU Mach 1.6,
-    GNU MIG 1.6 released|news/2015-10-31-releases]].
+    GNU MIG 1.6 released|news/2015-10-31-releases]], [...].
+  * 2016: [...], [[GNU Hurd 0.8, GNU Mach 1.7, GNU MIG 1.7
+    released|news/2016-05-18-releases]].
