--- a/index.mdwn
+++ b/index.mdwn
@@ -1,5 +1,5 @@
 [[!meta copyright="Copyright © 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008,
-2009, 2010, 2011, 2013, 2015 Free Software Foundation, Inc."]]
+2009, 2010, 2011, 2013, 2015, 2016 Free Software Foundation, Inc."]]
 
 [[!meta license="""[[!toggle id="license" text="GFDL 1.2+"]][[!toggleable
 id="license" text="Permission is granted to copy, distribute and/or modify this
@@ -98,8 +98,8 @@ are rendered on a [[Debian_GNU/Hurd|hurd/running/debian]] system.
 
 # Current Status
 
-The latest releases are [[GNU Hurd 0.7, GNU Mach 1.6, GNU MIG
-1.6|news/2015-10-31-releases]], 2015-10-31.  The Hurd is
+The latest releases are [[GNU Hurd 0.8, GNU Mach 1.7, GNU MIG
+1.7|news/2016-05-18-releases]], 2016-05-18.  The Hurd is
 developed by [[a few volunteers in their spare time|faq/how_many_developers]].
 The project welcomes any assistance [[you can provide|contributing]].
 Porting and development expertise is still badly needed in many key areas.
