--- a/microkernel/mach/gnumach.mdwn
+++ b/microkernel/mach/gnumach.mdwn
@@ -1,5 +1,5 @@
-[[!meta copyright="Copyright © 2001, 2002, 2007, 2008, 2011, 2013, 2015 Free
-Software Foundation, Inc."]]
+[[!meta copyright="Copyright © 2001, 2002, 2007, 2008, 2011, 2013, 2015, 2016
+Free Software Foundation, Inc."]]
 
 [[!meta license="""[[!toggle id="license" text="GFDL 1.2+"]][[!toggleable
 id="license" text="Permission is granted to copy, distribute and/or modify this
@@ -24,7 +24,7 @@ GNU Mach runs on x86 machines.  See the
 [[hardware_compatibility_list]] and information about
 [[ports]] to other architectures.
 
-The latest release is [[GNU Mach 1.6|news/2015-10-31-releases]].
+The latest release is [[GNU Mach 1.7|news/2016-05-18-releases]].
 
 
 # Advantages of GNU Mach
