--- a/microkernel/mach/mig/gnu_mig.mdwn
+++ b/microkernel/mach/mig/gnu_mig.mdwn
@@ -1,5 +1,5 @@
-[[!meta copyright="Copyright © 2001, 2006, 2008, 2009, 2010, 2013, 2015 Free
-Software Foundation, Inc."]]
+[[!meta copyright="Copyright © 2001, 2006, 2008, 2009, 2010, 2013, 2015, 2016
+Free Software Foundation, Inc."]]
 
 [[!meta license="""[[!toggle id="license" text="GFDL 1.2+"]][[!toggleable
 id="license" text="Permission is granted to copy, distribute and/or modify this
@@ -24,7 +24,7 @@ Like its predecessor, it can only generate C code, that has to be compiled and
 linked to client and server programs respectively ([[!taglink
 open_issue_mig]]).
 
-The latest release is [[GNU MIG 1.6|news/2015-10-31-releases]].
+The latest release is [[GNU MIG 1.7|news/2016-05-18-releases]].
 
   * [[Building]] - building (and obtaining) GNU MIG
   * [[Open Issues|tag/open_issue_mig]]
